2018-07-26  Fujii Hironori  <Hironori.Fujii@sony.com>

        [JSC API] We should support the symbol type in our C/Obj-C API
        https://bugs.webkit.org/show_bug.cgi?id=175836

        Unreviewed build fix for Windows port.

        r234227 introduced a compilation error unresolved external symbol
        "int __cdecl testCAPIViaCpp(void)" in testapi for Windows ports.

        Windows ports are compiling testapi.c as C++ by using /TP switch.

        * API/tests/testapi.c:
        (main): Removed `::` prefix of ::SetErrorMode Windows API.
        (dllLauncherEntryPoint): Converted into C style.
        * shell/PlatformWin.cmake: Do not use /TP switch for testapi.c

2018-07-25  Keith Miller  <keith_miller@apple.com>

        [JSC API] We should support the symbol type in our C/Obj-C API
        https://bugs.webkit.org/show_bug.cgi?id=175836

        Reviewed by Filip Pizlo.

        This patch makes the following API additions:
        1) Test if a JSValue/JSValueRef is a symbol via any of the methods API are able to test for the types of other JSValues.
        2) Create a symbol on both APIs.
        3) Get/Set/Delete/Define property now take ids in the Obj-C API.
        4) Add Get/Set/Delete in the C API.

        We can do 3 because it is both binary and source compatable with
        the existing API. I added (4) because the current property access
        APIs only have the ability to get Strings. It was possible to
        merge symbols into JSStringRef but that felt confusing and exposes
        implementation details of our engine. The new functions match the
        same meaning that they have in JS, thus should be forward
        compatible with any future language extensions.

        Lastly, this patch adds the same availability preproccessing phase
        in WebCore to JavaScriptCore, which enables TBA features for
        testing on previous releases.

        * API/APICast.h:
        * API/JSBasePrivate.h:
        * API/JSContext.h: