@@ -1,5 +1,15 @@
 2018-07-26  Fujii Hironori  <Hironori.Fujii@sony.com>
 
+        REGRESSION(r234248) [Win] testapi.c: nonstandard extension used: non-constant aggregate initializer
+        https://bugs.webkit.org/show_bug.cgi?id=188040
+
+        Unreviewed build fix for AppleWin port.
+
+        * API/tests/testapi.c: Disabled warning C4204.
+        (testMarkingConstraintsAndHeapFinalizers): Added an explicit void* cast for weakRefs.
+
+2018-07-26  Fujii Hironori  <Hironori.Fujii@sony.com>
+
         [JSC API] We should support the symbol type in our C/Obj-C API
         https://bugs.webkit.org/show_bug.cgi?id=175836
 
